--- a/AAkhil/about.html
+++ b/AAkhil/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo-placeholder"></div>
+    <div class="logo-placeholder">Orgastore</div>
     <ul class="nav-links">
        <li><a href="index.html">Home</a></li>
         <li><a href="categories.html">Categories</a></li>
@@ -28,7 +28,7 @@
       <p>
         Orgastore is dedicated to delivering the freshest vegetables and fruits directly from farmers to your doorstep. We believe in promoting healthy eating and supporting local farmers by creating a fair and transparent marketplace.
       </p>
-      <div class="img about-img"></div>
+      <img src="https://chatgpt.com/backend-api/public_content/enc/eyJpZCI6Im1fNjg1NjMzNmFhOTA4ODE5MTkwYjE0NWU4MmY3ZTEwNjg6ZmlsZV8wMDAwMDAwMDUyMjg2MWY1YjhjNDZjYzFiYWRlOWZiMSIsInRzIjoiNDg2MjQ0IiwicCI6InB5aSIsInNpZyI6IjVkZmM2OTkzNjQ3ZDM4ZGRmOWZhNDFhNTJjYmU2MTIxYjNjY2ZhOWQ3NDlkNWM0YjM0ZWQ5ZDFkMTFmZjkzZDUiLCJ2IjoiMCIsImdpem1vX2lkIjpudWxsfQ==" alt="about image" class="img about-img">
     </div>
 
     <div class="highlights">
