--- a/AAkhil/categories.html
+++ b/AAkhil/categories.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo-placeholder"></div>
+    <div class="logo-placeholder">Orgastore</div>
     <ul class="nav-links">
        <li><a href="index.html">Home</a></li>
         <li><a href="categories.html">Categories</a></li>
@@ -26,22 +26,22 @@
       <div class="category-card">
         <i class="fas fa-apple-alt icon"></i>
         <h3>Fruits</h3>
-        <div class="img"></div>
+        <img src="https://media.istockphoto.com/id/995518546/photo/assortment-of-colorful-ripe-tropical-fruits-top-view.jpg?s=612x612&w=0&k=20&c=bz2zksjSPikOYm9I-mG-f8SAQWVpFsR4M_u4K9soLQ0=" alt="Fruits" class="img">
       </div>
       <div class="category-card">
         <i class="fas fa-carrot icon"></i>
         <h3>Vegetables</h3>
-        <div class="img"></div>
+        <img src="https://cdn.britannica.com/17/196817-050-6A15DAC3/vegetables.jpg?w=400&h=300&c=crop" alt="vegetables">
       </div>
       <div class="category-card">
         <i class="fas fa-lemon icon"></i>
         <h3>Citrus</h3>
-        <div class="img"></div>
+        <img src="https://images.pexels.com/photos/2611810/pexels-photo-2611810.jpeg?cs=srgb&dl=pexels-myfoodie-2611810.jpg&fm=jpg" alt="Citrus" class="img">
       </div>
       <div class="category-card">
         <i class="fas fa-seedling icon"></i>
         <h3>Organic</h3>
-        <div class="img"></div>
+        <img src="https://www.eatingwell.com/thmb/6efq51So7xremuua1tJslULggz0=/1500x0/filters:no_upscale():max_bytes(150000):strip_icc()/The-Dirty-Dozen-2024--12-Foods-You-Should-Buy-Organic--1be04be247d043e2a510e2f7e2299cf8.jpg" alt="Organic" class="img">
       </div>
     </div>
   </section>
