--- a/AAkhil/contact.html
+++ b/AAkhil/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo-placeholder"></div>
+    <div class="logo-placeholder">Orgastore</div>
     <ul class="nav-links">
        <li><a href="index.html">Home</a></li>
         <li><a href="categories.html">Categories</a></li>
@@ -34,7 +34,8 @@
         <h3>Get in Touch</h3>
         <p><i class="fas fa-envelope"></i> support@orgastore.com</p>
         <p><i class="fas fa-phone-alt"></i> +91 98765 43210</p>
-        <div class="img contact-map"></div>
+        <img src="https://img.freepik.com/free-vector/flat-design-illustration-customer-support_23-2148887720.jpg?semt=ais_hybrid&w=740" alt="contact image" class="img contact-map">
+ 
       </div>
     </div>
   </section>
@@ -58,7 +59,8 @@
 </section>
 <section class="map">
   <h2>Our Location</h2>
-  <div class="img"></div>
+  <img src="https://img.freepik.com/free-vector/flat-design-illustration-customer-support_23-2148887720.jpg?semt=ais_hybrid&w=740" alt="contact image" class="img" srcset="">
+ 
 </section>
 <section class="support-social">
   <h2>Need Help?</h2>
