--- a/AAkhil/index.html
+++ b/AAkhil/index.html
@@ -11,7 +11,7 @@
 <body>
   <header>
     <nav class="navbar">
-      <div class="logo-placeholder"></div>
+      <div class="logo-placeholder">Orgastore</div>
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="categories.html">Categories</a></li>
@@ -26,7 +26,8 @@
         <p>Fresh, organic vegetables and fruits straight from farmers to you.</p>
         <a href="categories.html" class="btn">Explore Categories</a>
       </div>
-      <div class="img"></div>
+      
+      <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTjqa3VtXLbHwyxKeUdKAbuJrfrG8BaXI8RIQXubt4IOgwmFrFJUS-XFjYyHbrvOC1LFuE&usqp=CAU" alt="hero image" class="img">
     </section>
     <section class="featured-categories">
   <h2>Featured Categories</h2>
