--- a/AAkhil/products.html
+++ b/AAkhil/products.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <nav class="navbar">
-    <div class="logo-placeholder"></div>
+    <div class="logo-placeholder">Orgastore</div>
     <ul class="nav-links">
       <li><a href="index.html">Home</a></li>
       <li><a href="categories.html">Categories</a></li>
@@ -24,25 +24,26 @@
     <h2>Products in Selected Category</h2>
     <div class="product-grid">
       <div class="product-card">
-        <div class="img"></div>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/8/89/Tomato_je.jpg" alt="tomatoes" class="img">
         <h3>Tomatoes</h3>
         <p>₹30 / kg</p>
         <i class="fas fa-shopping-cart cart-icon"></i>
       </div>
       <div class="product-card">
-        <div class="img"></div>
+        <img class="img" src="https://images.pexels.com/photos/209439/pexels-photo-209439.jpeg" alt="carrots">
         <h3>Apples</h3>
         <p>₹120 / kg</p>
         <i class="fas fa-shopping-cart cart-icon"></i>
       </div>
       <div class="product-card">
-        <div class="img"></div>
+        <img class="img" src="https://static.toiimg.com/photo/105672842.cms" alt="carrots">
+        
         <h3>Carrots</h3>
         <p>₹45 / kg</p>
         <i class="fas fa-shopping-cart cart-icon"></i>
       </div>
       <div class="product-card">
-        <div class="img"></div>
+        <img class="img" src="https://t4.ftcdn.net/jpg/02/22/13/21/360_F_222132175_QGYTh05ecNcquK4NfVtQ3evhSXoPnUG3.jpg" alt="">
         <h3>Lemons</h3>
         <p>₹50 / kg</p>
         <i class="fas fa-shopping-cart cart-icon"></i>
